# cnn-from-scratch

./: .gitignore  CMakeLists.txt  Layers.cpp  Layers.h  Matrix.cpp  Matrix.h  Network.cpp  Network.h  README.md  main.cpp
.claude/: settings.local.json
apps/: mnist_train.cpp
include/cnn/: Network.h
include/cnn/core/: Matrix.h  Tensor.h
include/cnn/data/: MnistLoader.h
include/cnn/layers/: BatchNorm.h  Dense.h  Layer.h  ReLU.h
src/: Network.cpp
src/core/: Matrix.cpp  Tensor.cpp
src/data/: MnistLoader.cpp
src/layers/: BatchNorm.cpp  Dense.cpp  Layer.cpp  ReLU.cpp
